# coronachrome

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.md
docs/explanation/: crispy_heritage.md  mathematical_formulation.md  model.md  psflet_templates.md  sampling_contracts.md
src/coronachrome/: __init__.py  build.py  dispersion.py  extract.py  grids.py  ir.py  main.py  psflet.py  render.py  spectral.py  templates.py
tests/: conftest.py  test_build.py  test_crispy_centroids.py  test_dispersion.py  test_extract.py  test_grids.py  test_ir.py  test_psflet.py  test_render.py  test_spectral.py  test_templates.py
